# fishpack-cmake

./: CMakeLists.txt  LICENSE.txt  README.md  readme.html
src/: CMakeLists.txt
test/: CMakeLists.txt  tblktri.f  tcblktri.f  tcmgnbn.f  tgenbun.f  thstcrt.f  thstcsp.f  thstcyl.f  thstplr.f  thstssp.f  thw3crt.f  thwscrt.f  thwscsp.f  thwscyl.f  thwsplr.f  thwsssp.f  tpois3d.f  tpoistg.f  tsepeli.f  tsepx4.f
